--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="toolbox-cont">
         <div class="toolbox-priority-cont">
-            <div class="color lightpink"></div>
+            <div class="color pink"></div>
             <div class="color blue"></div>
             <div class="color green"></div>
             <div class="color black"></div>
@@ -36,7 +36,7 @@
         <textarea class="textarea-cont" placeholder="Enter Your Task"></textarea>
         
         <div class="priority-color-cont">
-            <div class="lightpink priority-color" data-color="lightpink"></div>
+            <div class="pink priority-color" data-color="lightpink"></div>
             <div class="blue priority-color" data-color="lightblue"></div>
             <div class="green priority-color" data-color="lightgreen"></div>
             <div class="black priority-color active" data-color="black"></div>
